--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+
+@font-face{
+  font-family: 'IRANSansXFaNum-regular';
+  src: local('IRANSansXFaNum-regular'), url(./fonts/IRANSansXFaNum-regular.woff2) format("truetype");
+}
+*{
+  font-family: IRANSansXFaNum-regular;
+}
+
 .App {
   text-align: center;
 }
@@ -7,6 +26,400 @@
   pointer-events: none;
 }
 
+.Btn-icon{
+  width:1.5rem;
+  height: 1.5rem;
+}
+.Container{
+  padding: 1.5rem;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  display: flex;
+    flex-flow: column;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    box-shadow: none;
+    gap: 1rem;
+    overflow: hidden;
+}
+
+.History-header{
+  max-width: 508px;
+  width: 100%;
+  border-radius: 1rem;
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: center;
+  justify-content: center;
+  box-shadow: rgba(97, 100, 117, 0.06) 0px 1px 1px, rgba(97, 100, 117, 0.04) 0px 2px 1px, rgba(97, 100, 117, 0.12) 0px 1px 3px;
+  gap: 2rem;
+}
+
+.History-header-item{
+  display: flex;
+  flex-flow: column;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding: 1rem;
+  box-shadow: none;
+  gap: 0px;
+}
+
+.History-header-item-header{
+  height: "65px";
+  width: "85px";
+}
+
+.History-header-item-image{
+  width: 85px;
+  height: 65px;
+  object-fit: fill;
+  height: auto;
+  max-width: 100%;
+  user-select: none;
+  pointer-events: none;
+
+}
+
+.History-header-item-title{
+  font-weight: 500;
+    font-size: 1.1875rem;
+    line-height: 1.5rem;
+    letter-spacing: 0em;
+    font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    color: rgb(37, 42, 60);
+    text-align: inherit;
+    text-decoration: none;
+
+}
+
+.History-header-item-detail{
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: rgb(104, 108, 121);
+  text-align: center;
+  text-decoration: none;
+}
+
+
+.History-item{
+  max-width: 508px;
+  width: 100%;
+  overflow:hidden ;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: rgba(97, 100, 117, 0.06) 0px 2px 2px, rgba(97, 100, 117, 0.04) 0px 3px 1px, rgba(97, 100, 117, 0.12) 0px 1px 5px;
+}
+
+
+
+.History-item-image{
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  min-height: 183px;
+  object-fit: fill;
+  height: auto;
+  max-width: 100%;
+  user-select: none;
+  pointer-events: none;
+}
+
+.History-item-body{
+  padding: 0.5rem;
+  box-shadow: none;
+}
+
+.History-item-top{
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  box-shadow: none;
+  gap: 0px;
+
+}
+
+.History-item-prof{
+  display: flex;
+    flex-direction: row;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    -webkit-box-pack: start;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    box-shadow: none;
+    gap: 0px;
+
+}
+
+.History-item-prof-pic{
+  border-radius: 100%;
+  flex-shrink: 0;
+  height: 48px;
+  overflow: hidden;
+  width: 48px;
+  box-shadow: none;
+}
+
+.History-item-prof-image{
+  width: 48px;
+  height: 48px;
+  object-fit: fill;
+  height: auto;
+  max-width: 100%;
+  user-select: none;
+  pointer-events: none;
+
+}
+
+.History-item-prof-body{
+  margin-inline-start: 0.5rem;
+  display: flex;
+  flex-flow: column;
+  -webkit-box-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: start;
+  justify-content: flex-start;
+  box-shadow: none;
+  gap: 0px;
+  text-align: right;
+  padding-right: 0.5rem;
+}
+
+.History-item-prof-name{
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: rgb(37, 42, 60);
+  text-align: inherit;
+  text-decoration: none;
+
+}
+
+.History-item-prof-car{
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: rgb(37, 42, 60);
+  text-align: inherit;
+  text-decoration: none;
+
+}
+
+.History-item-rate{
+  background-color: #e9f6ee;
+  color: #248a4a;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+}
+
+
+.History-item-rate-text{
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: #248a4a;;
+  text-align: center;
+  text-decoration: none;
+
+}
+
+.History-item-middle{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  box-shadow: none;
+  gap: 0px;
+
+}
+
+.History-item-time{
+
+}
+
+.History-item-time-text{
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: rgb(37, 42, 60);
+  text-align: inherit;
+  text-decoration: none;
+
+}
+
+.History-item-pay{
+  box-shadow: none;
+}
+
+.History-item-pay-icon{
+  width: 1em;
+  height: 1em;
+  transform: none;
+  color: inherit;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  user-select: none;
+  fill: currentcolor;
+  flex-shrink: 0;
+  display: inline-block;
+  vertical-align: middle;
+  text-transform: none;
+  text-decoration: none;
+}
+
+.History-item-pay-container{
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  height: 1.5rem;
+  padding: 0.25rem 0.5rem;
+  gap: 0.25rem;
+  background-color: rgba(104, 108, 121, 0.1);
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  color: rgb(104, 108, 121);
+  border-radius: 1.5rem;
+
+}
+
+.History-item-pay-mony{
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  text-align: inherit;
+  text-decoration: none;
+  color: inherit;
+
+}
+
+.Hr1{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  flex-shrink: 0;
+  border-width: 0px 0px 1px;
+  border-style: solid;
+  background: none;
+  margin-inline: 0px;
+  border-color: rgb(235, 236, 242);
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+.History-item-bottom{
+
+  margin-top: 0.5rem;
+  display: flex;
+  flex-flow: column;
+  -webkit-box-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: start;
+  justify-content: flex-start;
+  box-shadow: none;
+  gap: 0px;
+}
+
+.History-item-dir{
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: start;
+  justify-content: flex-end;
+  box-shadow: none;
+  gap: 0.5rem;
+
+}
+
+.History-item-dir-text{
+  direction: rtl;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: rgb(104, 108, 121);
+  text-align: inherit;
+  text-decoration: none;
+
+}
+
+.btn-dir1{
+  width: 1em;
+  height: 1em;
+  transform: none;
+  color: rgb(87, 94, 255);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  user-select: none;
+  fill: currentcolor;
+  flex-shrink: 0;
+  display: inline-block;
+  vertical-align: middle;
+  text-transform: none;
+  text-decoration: none;
+}
+
+.btn-dir2{
+  width: 1em;
+  height: 1em;
+  transform: none;
+  color: rgb(34, 169, 88);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  user-select: none;
+  fill: currentcolor;
+  flex-shrink: 0;
+  display: inline-block;
+  vertical-align: middle;
+  text-transform: none;
+  text-decoration: none;
+
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -14,18 +427,126 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  z-index: 25;
+  box-shadow: none;
+  position: sticky;
+  top: 0px;
+}
+.Main-header{
+  font-weight: 500;
+  font-size: 1.1875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0em;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 255);
+  padding: 1rem;
+  color: rgb(37, 42, 60);
+}
+
+.Title-header{
+  font-weight: 500;
+  font-size: 1.1875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: rgb(37, 42, 60);
+  text-align: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: IRANSansXFaNum-regular;
+}
+
+.Nav-header{
+  display: flex;
+  align-items: center;
+}
+
+.App-header .app-nav{
+  font-weight: 500;
+  font-size: 1.1875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0em;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  height: 4rem;
+  background-color: rgb(255, 255, 255);
+  padding: 1rem;
+  color: rgb(37, 42, 60);
+}
+
+.css-ilfety{
+  text-align: start;
+  width: 90px;
+}
+.css-1recm3l{
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  font-family: IRANSansXFaNum, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
+  outline: none;
+  user-select: none;
+  white-space: nowrap;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+  border-radius: 0.5rem;
+  padding-inline: 0.5rem;
+  border: none;
+  box-shadow: none;
+  padding: 0px;
+  width: 40px;
+  height: 40px;
+  color: rgb(37, 42, 60);
+  min-width: unset;
+}
+
+.css-94qwli {
+  padding-inline: 0px;
+}
+
+.css-19a09oi {
+  inset: 0px;
+  overflow: hidden;
+  border-radius: inherit;
+  pointer-events: none;
+  position: absolute;
+  -webkit-mask-image: radial-gradient(white, black);
+}
+.css-1ej5sdr{
+  font-weight: 500;
+    font-size: 1.1875rem;
+    line-height: 1.5rem;
+    letter-spacing: 0em;
+    font-family: IRANSansXFaNum, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    color: rgb(37, 42, 60);
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.css-11d8diu{
+  width: 90px;
+  height: 90px;
 }
 
 @keyframes App-logo-spin {
